--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=poslifay
 # MySQL Ba?lant? Ayarlar?
 spring.datasource.url=jdbc:mysql://localhost:3306/poslifay?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=omerutkudemir
+spring.datasource.password=ENES1905
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Ayarlar?
